# cryptovision-elt-lakehouse

./: LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json
src/cryptovision/: __init__.py
src/cryptovision/binance_client/: client.py  naming.py
src/cryptovision/silver_processing/: io.py  processor.py  schema.py
src/cryptovision/utils/: paths.py
tests/: test_binance_client.py  test_io.py  test_schema.py
