[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "cryptovision"
version = "0.0.1"
requires-python = ">= 3.11"
dependencies = [
    "requests>=2.32.5,<3",
    "polars>=1.38.1,<2"
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["cryptovision*"]